fix(style): allow scroll when y-overflow

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -6,9 +6,8 @@
 }
 
 html, body {
-  overflow-y: hidden;
-  overflow-x: hidden;
   font-family: "courier-prime-v1-latin-regular";
+  overscroll-behavior: none;
 }
 
 body {
@@ -164,21 +163,6 @@ body {
     top: 0;
     z-index: 1;
     background: #ffffff;
-}
-
-::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-}
-
-::-webkit-scrollbar-thumb {
-    background: rgba(0,0,0,0.2);
-    border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: rgba(0,0,0,0.3);
-    border-radius: 10px;
 }
 
 .flex-container {
